--- a/index.html
+++ b/index.html
@@ -45,10 +45,37 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="container">
+                <div class="flex-container">
+                    <div class="flex-100 min-height-500 bg-color-green"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="flex-container">
+                    <div class="flex-33 min-height-300 bg-color-pink"></div>
+                    <div class="flex-66 min-height-300 bg-color-aqua">
+                        <div class="flex-container">
+                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
+                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
+                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
+                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer>
+        <div class="container">
+            <div class="flex-container space-between py-10 bg-color-lightaqua">
+                <div class="border-2 bg-color-pink">Logo</div>
+                <div class="border-2 bg-color-pink">Bottone</div>
+            </div>
+        </div>
     </footer>
-    </div>
-        
 </body>
 </html>
