--- a/index.html
+++ b/index.html
@@ -21,47 +21,50 @@
         </div>
     </header>
     <main>
+        <div class="slideshow-section bg-color-darkblue">
+            <div class="slideshow bg-color-lavander min-height-300 border-2"></div>
+        </div>
         <section>
             <div class="container">
                 <div class="flex-container">
-                    <div class="flex-66 min-height-300 bg-color-blue"></div>
-                    <div class="flex-33 min-height-300 bg-color-pink"></div>
+                    <div class="flex-66 min-height-300 bg-color-blue border-2"></div>
+                    <div class="flex-33 min-height-300 bg-color-pink border-2"></div>
                 </div>
             </div>
         </section>
         <section>
              <div class="container">
                 <div class="flex-container">
-                    <div class="flex-33 min-height-300 bg-color-pink"></div>
-                    <div class="flex-66 min-height-300 bg-color-blue"></div>
+                    <div class="flex-33 min-height-300 bg-color-pink border-2"></div>
+                    <div class="flex-66 min-height-300 bg-color-blue border-2"></div>
                 </div>
             </div>
         </section>
         <section>
             <div class="container">
                 <div class="flex-container">
-                    <div class="flex-66 min-height-300 bg-color-blue"></div>
-                    <div class="flex-33 min-height-300 bg-color-pink"></div>
+                    <div class="flex-66 min-height-300 bg-color-blue border-2"></div>
+                    <div class="flex-33 min-height-300 bg-color-pink border-2"></div>
                 </div>
             </div>
         </section>
         <section>
             <div class="container">
                 <div class="flex-container">
-                    <div class="flex-100 min-height-500 bg-color-green"></div>
+                    <div class="flex-100 min-height-500 bg-color-green border-2"></div>
                 </div>
             </div>
         </section>
-        <section>
+        <section class="bg-color-black">
             <div class="container">
                 <div class="flex-container">
-                    <div class="flex-33 min-height-300 bg-color-pink"></div>
-                    <div class="flex-66 min-height-300 bg-color-aqua">
+                    <div class="flex-33 min-height-300 bg-color-pink border-2"></div>
+                    <div class="flex-66 min-height-300 bg-color-aqua border-2">
                         <div class="flex-container">
-                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
-                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
-                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
-                            <div class="flex-25 min-height-300 border-2 bg-color-aqua"></div>
+                            <div class="flex-25 min-height-300 border-2-white bg-color-aqua"></div>
+                            <div class="flex-25 min-height-300 border-2-white bg-color-aqua"></div>
+                            <div class="flex-25 min-height-300 border-2-white bg-color-aqua"></div>
+                            <div class="flex-25 min-height-300 border-2-white bg-color-aqua"></div>
                         </div>
                     </div>
                 </div>
